# relational-ematching-benchmark

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bench.sh  compare.py  docker.sh  patterns.csv
src/: lambda.rs  main.rs  math.rs
