[package]
name = "egg-bench"
version = "0.1.0"
authors = ["Yihong Zhang <yz489@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "1"
structopt = { version = "0.3", default-features = false }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
env_logger = "0.6"

[dependencies.egg]
# path = "../egg"
git = "https://github.com/egraphs-good/egg"
rev = "2b89b7594c2e163d9eab9cb687be1edbd7e09563"

[profile.release]
lto = "fat"
codegen-units = 1
